# VisuModiRam

./: Cargo.toml  LICENSE  README.md
src/: Egui_monitor.rs  com_resource.rs  gdb_parser.rs  main.rs  probe_interface.rs
src/debugging_tools/: elf_parser.rs  gdb_parser.rs  memory_interface.rs  mod.rs  probe_interface.rs  probe_interface2.rs
src/monitor_ui/: main_monitor.rs  mod.rs  probe_setting.rs  setting_panel.rs  setting_panel2.rs  symbol_search.rs
src/monitor_ui/widgets/: button.rs  edit_table.rs  gauge.rs  graph_monitor.rs  graph_test.rs  mod.rs  probe_if_test.rs  slider.rs  table_view.rs  toggle_switch.rs  widget_test.rs
src/pyelftools_test/: test.py
